-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 17, 18
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8277276 | 17.0.3-oracle | Tobias Hartmann | P2 | Resolved | Fixed | b01 |
| JDK-8277173 | 17.0.2 | Tobias Hartmann | P2 | Closed | Fixed | b05 |
#
# Internal Error (/workspace/open/src/hotspot/share/opto/node.hpp:391), pid=2560545, tid=2564754
# assert(i < _max) failed: oob: i=16, _max=16
Current CompileTask:
C2: 545601 41515 ! 4 jdk.proxy2.$Proxy26::doSomething (32 bytes)
Stack: [0x00007fc1944f1000,0x00007fc1945f2000], sp=0x00007fc1945ecb00, free space=1006k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x159325f] PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0xd6f
V [libjvm.so+0x1593cd9] PhaseOutput::Process_OopMap_Node(MachNode*, int)+0x3c9
V [libjvm.so+0x1596f4f] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0xebf
V [libjvm.so+0x9f7097] Compile::Code_Gen()+0x427
V [libjvm.so+0xa03428] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1668
V [libjvm.so+0x81ded6] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa13799] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd09
V [libjvm.so+0xa14438] CompileBroker::compiler_thread_loop()+0x518
V [libjvm.so+0x188962c] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x188fbe0] Thread::call_run()+0x100
V [libjvm.so+0x156f524] thread_native_entry(Thread*)+0x104
Different but related failure mode:
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/opto/output.cpp:803), pid=328000, tid=328013
# assert(local) failed: use _top instead of null
#
Current CompileTask:
C2: 602 2 b 4 Test::test (9 bytes)
Stack: [0x00007faca9d37000,0x00007faca9e38000], sp=0x00007faca9e32e00, free space=1007k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x158e3cc] PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x3fc
V [libjvm.so+0x158e87e] PhaseOutput::FillLocArray(int, MachSafePointNode*, Node*, GrowableArray<ScopeValue*>*, GrowableArray<ScopeValue*>*)+0x8ae
V [libjvm.so+0x158f7d9] PhaseOutput::Process_OopMap_Node(MachNode*, int)+0x3c9
V [libjvm.so+0x1592a2c] PhaseOutput::fill_buffer(CodeBuffer*, unsigned int*)+0xe9c
V [libjvm.so+0x9fc427] Compile::Code_Gen()+0x427
V [libjvm.so+0xa08512] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0x1652
V [libjvm.so+0x81cd16] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x646
V [libjvm.so+0xa186a1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xd31
V [libjvm.so+0xa193d8] CompileBroker::compiler_thread_loop()+0x598
V [libjvm.so+0x1886bec] JavaThread::thread_main_inner()+0x27c
V [libjvm.so+0x188d1e0] Thread::call_run()+0x100
V [libjvm.so+0x156b3d4] thread_native_entry(Thread*)+0x104
- backported by
-
JDK-8277276 Inconsistent scalar replacement debug info at safepoints
-
- Resolved
-
-
JDK-8277173 Inconsistent scalar replacement debug info at safepoints
-
- Closed
-
- relates to
-
JDK-8281075 Regression ~37% in Renaissance-NaiveBayes on Mac only after JDK-8276112
-
- Closed
-
-
JDK-8284198 Undo JDK-8261137: Optimization of Box nodes in uncommon_trap
-
- Resolved
-
-
JDK-8261137 Optimization of Box nodes in uncommon_trap
-
- Closed
-
-
JDK-8276998 [REDO] Optimization of Box nodes in uncommon_trap
-
- Open
-
- links to
-
Commit
openjdk/jdk17u/6221d616
-
Commit
openjdk/jdk/c29cab8a
-
Review
openjdk/jdk17u/257
-
Review
openjdk/jdk/6333