8276112: Inconsistent scalar replacement debug info at safepoints